--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-router-mock": "^0.9.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
